// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DomainFormik should allow to set UI toolkit for particular instance 1`] = `
<form
  className=""
  name="User"
>
  <div>
    <input
      className={undefined}
      name="custom_username"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Username"
      type="text"
      value="John"
    />
  </div>
  <div>
    <input
      className={undefined}
      name="custom_email"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Email"
      type="text"
      value=""
    />
  </div>
  <div>
    <input
      className={undefined}
      name="custom_pass"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Password"
      type="text"
      value=""
    />
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <button
      className="btn btn-secondary disabled"
      disabled={true}
      onClick={[Function]}
      type="submit"
    >
      Save
    </button>
  </div>
</form>
`;

exports[`DomainFormik should generate complex form 1`] = `
<form
  className=""
  name="User"
>
  <div
    className="form-group"
  >
    <label
      className=""
      htmlFor="name"
    >
      Username
    </label>
    <input
      className="form-control"
      id="name"
      name="name"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Username"
      type="text"
      value="User"
    />
  </div>
  <div
    className="form-group"
  >
    <label
      className=""
      htmlFor="email"
    >
      Email
    </label>
    <input
      className="form-control"
      id="email"
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="User email"
      type="email"
      value=""
    />
  </div>
  <div>
    <div>
      <select
        className="form-control"
        onBlur={[Function]}
        onChange={[Function]}
        style={
          Object {
            "width": "100%",
          }
        }
        type="select"
        value="0"
      >
        <option
          value="1"
        >
          Group_1
        </option>
        <option
          value="2"
        >
          Group_2
        </option>
        <option
          value="3"
        >
          Group_3
        </option>
        <option
          value="4"
        >
          Group_4
        </option>
        <option
          value="5"
        >
          Group_5
        </option>
      </select>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      className=""
      htmlFor="password"
    >
      Password
    </label>
    <input
      className="form-control"
      id="password"
      name="password"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value=""
    />
  </div>
  <div
    className="form-group"
  >
    <label
      className=""
      htmlFor="passwordConfirmation"
    >
      Password Confirmation
    </label>
    <input
      className="form-control"
      id="passwordConfirmation"
      name="passwordConfirmation"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Password Confirmation"
      type="password"
      value=""
    />
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <button
      className="btn btn-secondary"
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`DomainFormik should generate form with custom field 1`] = `
<form
  className=""
  name="User"
>
  <div
    className="form-group"
  >
    <label
      className=""
      htmlFor="username"
    >
      Username
    </label>
    <input
      className="form-control"
      id="username"
      name="username"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Username"
      type="text"
      value="User"
    />
  </div>
  <div>
    <input
      className="my-awesome-field"
      name="userfield"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="User Field"
      type="text"
      value="my field"
    />
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <button
      className="btn btn-secondary disabled"
      disabled={true}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`DomainFormik should generate simple form 1`] = `
<form
  className=""
  name="User"
>
  <div
    className="form-group"
  >
    <label
      className=""
      htmlFor="username"
    >
      Username
    </label>
    <input
      className="form-control"
      id="username"
      name="username"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="name"
      type="text"
      value="John"
    />
  </div>
  <div
    className="form-group"
  >
    <label
      className=""
      htmlFor="email"
    >
      Email
    </label>
    <input
      className="form-control"
      id="email"
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Email"
      type="email"
      value=""
    />
  </div>
  <div
    className="form-group"
  >
    <label
      className=""
      htmlFor="pass"
    >
      Email
    </label>
    <input
      className="form-control"
      id="pass"
      name="pass"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Email"
      type="password"
      value=""
    />
  </div>
  <div
    className="form-group"
  >
    <div
      className="form-check"
    >
      <input
        checked={true}
        className="form-check-input"
        id="isActive"
        name="isActive"
        onBlur={[Function]}
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="form-check-label "
        htmlFor="isActive"
      >
        Is Active
      </label>
    </div>
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <button
      className="btn btn-secondary disabled"
      disabled={true}
      onClick={[Function]}
      type="submit"
    >
      Save
    </button>
  </div>
</form>
`;
